--- a/package.json
+++ b/package.json
@@ -15,15 +15,22 @@
   "author": "Stephan Petersen",
   "license": "MIT",
   "dependencies": {
+    "@babel/runtime": "^7.14.0",
     "clean-css": "^5.1.0",
     "debug": "^4.3.1",
     "gulp": "^4.0.2",
+    "npm": "^7.13.0",
     "sass": "^1.32.8"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.3",
+    "@babel/plugin-transform-runtime": "^7.14.3",
+    "@babel/preset-env": "^7.14.2",
+    "babel-polyfill": "^6.26.0",
     "browser-sync": "^2.26.12",
     "cross-env": "^7.0.2",
     "del": "^6.0.0",
+    "gulp-babel": "^8.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-cssmin": "^0.2.0",
     "gulp-dart-sass": "^1.0.2",
